Table layout fix on mobile view

--- a/polls/style.css
+++ b/polls/style.css
@@ -353,7 +353,7 @@ label::before {
 
 .lboard_table {
   width:100%;
-  table-layout: auto;
+  table-layout: fixed;
 }
 
 .lboard_table th {
@@ -375,7 +375,7 @@ label::before {
   font-weight: 300;
   border-bottom: solid 1px rgba(255,255,255, 0.2);
   word-wrap:break-word;
-  white-space: nowrap;
+  white-space: break-spaces;
 }
 
 .userSearch{
